defined pink color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#199DDA</color>
 
     <color name="yellow">#fec524</color>
+    <color name="pink">#E62565</color>
 </resources>
