--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,17 +10,32 @@
         android:layout_height="match_parent"
         android:id="@+id/webView"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingButton"
-        android:src="@drawable/ic_directions_bus_white_48dp"
-        app:fabSize="normal"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/multiple_actions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp">
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/set_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_icon="@drawable/ic_favorite_white_48dp"
+            fab:fab_colorNormal="@color/pink"
+            fab:fab_title="Action A"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/show_lines"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_size="normal"
+            fab:fab_icon="@drawable/ic_directions_bus_white_48dp"
+            fab:fab_title="Action with a very long name that won\'t fit on the screen"/>
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
