added new line: 65 and two temporary lines

--- a/app/src/main/res/layout/dialog_line.xml
+++ b/app/src/main/res/layout/dialog_line.xml
@@ -117,6 +117,39 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                app:srcCompat="@drawable/adz25"
+                android:id="@+id/imageView6" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:id="@+id/label6"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/substitute_bus_lines" />
+
+        </LinearLayout>
+
+        <TableLayout
+            android:id="@+id/busSubstituteLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:shrinkColumns="*"
+            android:stretchColumns="*"
+            android:dividerPadding="10dp">
+        </TableLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 app:srcCompat="@drawable/anz25"
                 android:id="@+id/imageView4" />
 
