--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,16 +26,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_icon="@drawable/ic_favorite_white_48dp"
-            fab:fab_colorNormal="@color/pink"
-            fab:fab_title="Action A"/>
+            fab:fab_colorNormal="@color/pink"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/show_lines"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_size="normal"
-            fab:fab_icon="@drawable/ic_directions_bus_white_48dp"
-            fab:fab_title="Action with a very long name that won\'t fit on the screen"/>
+            fab:fab_icon="@drawable/ic_directions_bus_white_48dp"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_size="normal"
+            fab:fab_icon="@drawable/ic_settings_white_48dp"/>
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
