--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="yellow">#fec524</color>
     <color name="pink">#E62565</color>
+    <color name="red">#ff0000</color>
 </resources>
