--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,5 +65,14 @@
             fab:fab_title="Ustawienia"
             fab:fab_icon="@drawable/ic_settings_white_48dp"/>
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/widgets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_size="mini"
+            fab:fab_title="Widgety"
+            fab:fab_icon="@drawable/ic_widgets_white_48dp"
+            fab:fab_colorNormal="@color/green"/>
+
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
