--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,10 @@
     <color name="yellow">#fec524</color>
     <color name="pink">#E62565</color>
     <color name="red">#ff0000</color>
+    <color name="green">#189431</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="orange">#fa0</color>
     <color name="black_semi_transparent">#B2000000</color>
 </resources>
