--- a/app/src/main/res/layout/dialog_line.xml
+++ b/app/src/main/res/layout/dialog_line.xml
@@ -189,6 +189,40 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/busTouristicLabel"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    app:srcCompat="@drawable/adt25"
+                    android:id="@+id/imageView9" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold"
+                    android:id="@+id/label9"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/touristic_bus_lines" />
+
+            </LinearLayout>
+
+            <TableLayout
+                android:id="@+id/busTouristicTable"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:shrinkColumns="*"
+                android:stretchColumns="*"
+                android:dividerPadding="10dp">
+            </TableLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/busSubstituteLabel"
                 android:orientation="horizontal">
 
