--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -56,6 +56,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="match_parent"
+                    android:padding="5dp"
                     android:text="@string/ad_latamy"/>
 
                 <Button
@@ -81,6 +82,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="match_parent"
+                    android:padding="5dp"
                     android:text="@string/ad_flipero"/>
 
                 <Button
@@ -106,6 +108,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="wrap_content"
+                    android:padding="5dp"
                     android:text="@string/ad_text"/>
 
                 <Button
